-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 Beta 1, 5.0.0 Beta 2, 5.0.0 RC 1
-
None
QPlatformWindow does not provide any function to implement QWidget::setWindowFilePath(). Without it, there no way to add support even with a custom platform plugin.
- relates to
-
QTBUG-27175 QApplication::setWindowIcon does not work
-
- Closed
-
For Gerrit Dashboard: QTBUG-27299 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
36076,4 | QWindow::setWindowFilePath added | master | qt/qtbase | Status: MERGED | +2 | 0 |