src/gui/kernel/qplatformwindow.h
@@ -97,6 +97,7 @@ public:
     virtual void setParent(const QPlatformWindow *window);
 
     virtual void setWindowTitle(const QString &title);
+    virtual void setWindowFilePath(const QString &title);
     virtual void setWindowIcon(const QIcon &icon);
     virtual void raise();
     virtual void lower();
